--- a/static/css/boxstyles.css
+++ b/static/css/boxstyles.css
@@ -1,57 +1,37 @@
-/*body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}*/
-
-.colorful-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
+.custom-box {
+    display: block;
     max-width: 600px;
-    padding: 30px;
+    margin: 20px auto;
+    padding: 20px;
     background: linear-gradient(135deg, #ff7e5f, #feb47b);
     border-radius: 15px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     color: white;
-    text-align: center;
 }
 
-.text-block {
-    width: 100%;
+.custom-text-block {
     margin-bottom: 20px;
+    padding: 20px;
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    border-radius: 10px;
 }
 
-.text-block h2 {
-    font-size: 2em;
+.custom-text-block h2 {
+    font-size: 1.5em;
     margin-bottom: 10px;
     font-weight: 700;
-    letter-spacing: 1px;
 }
 
-.text-block p {
-    font-size: 1.2em;
+.custom-text-block p {
+    font-size: 1.1em;
     line-height: 1.5em;
+    margin: 0;
 }
 
-.text-block:last-child {
-    margin-bottom: 0;
-}
-
-.text-block:nth-child(1) {
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.text-block:nth-child(2) {
+.custom-text-block:nth-child(2) {
     background: linear-gradient(135deg, #ff512f, #dd2476);
-    padding: 20px;
-    border-radius: 10px;
+}
+
+.custom-box .custom-text-block:last-child {
+    margin-bottom: 0;
 }
